Adding range inputs

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 			<section id="imperial_inputs">
 				<p> Weight </p>
 
+				<input id="range_input_weight" type="range" min="0" max="363" value="0">
+
 				<input id="input_st" type="number">
 				<label for="input_st"> st</label>
 
@@ -30,6 +32,8 @@
 				<label for="input_lbs"> lbs</label>
 
 				<p> Height </p>
+
+				<input id="range_input_height" type="range" min="0" max="107" value="0">
 
 				<input id="input_ft" type="number">
 				<label for="input_ft"> ft</label>
